# Texas-Test-Files

./: CMakeLists.txt  Test.ktx  defaultTextureSource.psd  stbi_test.cpp
KTX/valid/: 02.ktx  Test file description.txt
PNG/: File descriptions.txt
PNG/valid/: File descriptions.txt
data/KTX/Exported - Experimental/: Test.ktx
data/KTX/valid/: 07.ktx
data/PNG/valid/: File descriptions.txt
